--- a/TableroSLAs/SLAsCAPCRetEnt.html
+++ b/TableroSLAs/SLAsCAPCRetEnt.html
@@ -164,7 +164,7 @@ jQuery(function ($) {
 <link rel="stylesheet" type="text/css" href="Styles/{CCS_Style}/Style_doctype.css">
 <link rel="stylesheet" type="text/css" href="Styles/{CCS_Style}/jquery-ui.css">
 </head>
-<body calificaReq();">
+<body onload="calificaReq();">
 <p>{Header}</p>
 <p>
 <table border="0" cellspacing="0" cellpadding="0" width="90%">
