--- a/TableroSLAs/IncidentesDetalleNS.html
+++ b/TableroSLAs/IncidentesDetalleNS.html
@@ -54,7 +54,7 @@
           <!-- END Error -->
           <tr class="Controls">
             <td class="th">Incidente:</td> 
-            <td class="th"><label for="mc_info_incidentesSearchs_Id_incidente_param" style="display: none;">TextBox1</label><input type="text" id="mc_info_incidentesSearchs_Id_incidente_param" value="{s_Id_incidente_param}" name="{s_Id_incidente_param_Name}"></td> 
+            <td class="th"><label style="display: none;" for="mc_info_incidentesSearchs_Id_incidente_param">TextBox1</label><input type="text" id="mc_info_incidentesSearchs_Id_incidente_param" value="{s_Id_incidente_param}" name="{s_Id_incidente_param_Name}"></td> 
             <td class="th"><label for="mc_info_incidentesSearchs_Id_incidente_param">Proveedor</label></td> 
             <td>&nbsp; 
               <select id="s_cds_param" name="{s_id_proveedor_Name}">
@@ -63,7 +63,7 @@
               </select>
  </td> 
             <td>Mes </td> 
-            <td>&nbsp; <label for="mc_info_incidentesSearchs_MesReporte" style="display: none;">ListBox1</label> 
+            <td>&nbsp; <label style="display: none;" for="mc_info_incidentesSearchs_MesReporte">ListBox1</label> 
               <select id="mc_info_incidentesSearchs_MesReporte" name="{s_MesReporte_Name}">
                 <option selected value="">{res:CCS_SelectValue}</option>
                 {s_MesReporte_Options}
